<resources>
    <string name="app_name">Nav project</string>
    <string name="button3">Button 3</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO 2</string>
    <string name="todo3">TODO 3</string>
    <string name="imageName">Image 1</string>
    <string name="todo4">TODO 4</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>